<resources>
    <!-- App Name and Login XML -->
    <string name="app_name">Notre Dame PHR</string>
    <string name="ND_PHR">ND Personal Health Records</string>
    <string name="action_settings">Settings</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="Register">New to ND PHR? Click here to register.</string>
    <string name="title_activity_landing">Notre Dame PHR</string>
    <!-- Landing Page Strings -->
    <string name="dashboard">Dashboard</string>
    <string name="health_views">Health Views</string>
    <string name="measurements">Measurements</string>
    <string name="history">History</string>
    <string name="cholesterol">Cholesterol</string>
    <string name="blood_glucose">Blood Glucose</string>
    <string name="measures">Measurements</string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="immunizations">Immunizations</string>
    <string name="appointments">Appointments</string>
    <string name="emergency_prof">Emergency Profile</string>
    <string name="weight_mng">Weight Management</string>
    <string name="exercise">Exercise</string>
    <string name="lab_results">Lab Results</string>
    <string name="voice_record">Voice Recording</string>
    <!-- Account Modification Page Strings -->
    <string name="first">First Name</string>
    <string name="last">Last Name</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip">Zip</string>
    <string name="submit">Submit</string>
    <!-- Titles -->
    <string name="title_activity_health_options">HealthOptionsActivity</string>
    <string name="title_activity_cholestoral">CholestoralActivity</string>
    <string name="title_activity_account">AccountActivity</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="title_activity_voice_record">Voice Record Activity</string>
    <string name="signup">Sign up for ND PHR</string>

    <string name="hello_world">Hello world!</string>
</resources>
