<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:fillViewport="true"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.nd.phr.HealthOptionsActivity"
    android:background="#ffafb8"
    android:focusableInTouchMode="true">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/dashboard"
            android:clickable="true"
            android:onClick="toAccount"
            android:textStyle="bold"
            android:textColor="#ff474a"
            android:gravity="center_horizontal"
            android:textSize="@dimen/abc_text_size_large_material"
            android:paddingRight="15dp" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/voice_record"
            android:gravity="center_vertical"
            android:onClick="toVoiceRecord"
            android:nestedScrollingEnabled="false"
            android:singleLine="true"
            android:textAlignment="center"
            android:paddingStart="108dp"
            android:paddingEnd="110dp" />

        <TextView
            android:text="@string/health_views"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/emergency_profile"
            android:drawableLeft="@drawable/emergency_profile"
            android:text="@string/emergency_prof"
            android:gravity="center_vertical"/>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/weight_management"
            android:drawableLeft="@drawable/weight_management"
            android:text="@string/weight_mng"
            android:gravity="center_vertical"/>
        <TextView
            android:text="@string/measurements"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/blood_glucose"
            android:drawableLeft="@drawable/blood_glucose"
            android:text="@string/blood_glucose"
            android:gravity="center_vertical"/>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/blood_pressure"
            android:drawableLeft="@drawable/blood_pressure"
            android:text="@string/blood_pressure"
            android:gravity="center_vertical"/>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/height"
            android:drawableLeft="@drawable/height"
            android:text="@string/measures"
            android:gravity="center_vertical"/>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/cholesterol"
            android:drawableLeft="@drawable/cholesterol"
            android:text="@string/cholesterol"
            android:gravity="center_vertical"
            android:onClick="toCholestoral"/>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/exercise"
            android:drawableLeft="@drawable/exercise"
            android:text="@string/exercise"
            android:gravity="center_vertical"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/history"/>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/appointments"
            android:drawableLeft="@drawable/appointments"
            android:text="@string/appointments"
            android:gravity="center_vertical"/>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/immunization"
            android:drawableLeft="@drawable/immunization"
            android:text="@string/immunizations"
            android:gravity="center_vertical"/>
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/lab_results"
            android:drawableLeft="@drawable/lab_results"
            android:text="@string/lab_results"
            android:gravity="center_vertical"/>
    </LinearLayout>

</ScrollView>
