<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="edu.nd.phr.AccountActivity">

    <EditText
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/first"
        android:maxLength="15"
        android:singleLine="true"
        android:id="@+id/editText_accfirstname"/>
    <EditText
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/last"
        android:maxLength="15"
        android:singleLine="true"
        android:id="@+id/editText_acclastname"/>
    <EditText
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/address"
        android:singleLine="true"
        android:id="@+id/editText_accaddress"/>
    <EditText
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        android:singleLine="true"
        android:inputType="phone"
        android:id="@+id/editText_accphone"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal">
        <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:hint="@string/city"
            android:singleLine="true"
            android:id="@+id/editText_acccity"/>
        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:hint="@string/state"
            android:singleLine="true"
            android:id="@+id/editText_accstate"/>
        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:hint="@string/zip"
            android:singleLine="true"
            android:id="@+id/editText_acczip"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >
    <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>
</LinearLayout>
