<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="edu.nd.phr.SignupActivity">
    <TextView
        android:textColor="#ff4128ff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:height="50dp"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:text="@string/signup"/>
    <EditText
        android:id="@+id/signup_firstname"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:hint="@string/first"
        android:singleLine="true"/>
    <EditText
        android:id="@+id/signup_lastname"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:hint="@string/last"
        android:singleLine="true"/>
    <EditText
        android:id="@+id/signup_email"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/Email"
        android:singleLine="true"/>
    <EditText
        android:id="@+id/signup_password"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:singleLine="true"/>
    <Button
        android:text="@string/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="verifySignup"/>
</LinearLayout>
