<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dip"
    tools:context=".LoginActivity"
    android:orientation="vertical">
    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#372c24"
        android:text="@string/Email"/>
    <EditText android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:inputType="textEmailAddress"
        android:id="@+id/editText_email_address"
        android:layout_marginBottom="20dip"
        android:singleLine="true"/>
    <!--  Password Label -->
    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#372c24"
        android:text="@string/Password"/>
    <EditText android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:id="@+id/editText_password"
        android:layout_marginTop="5dip"
        android:singleLine="true"
        android:password="true"/>
    <!-- Login button -->
    <Button android:id="@+id/btnLogin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/Login"
        android:onClick="verifyLogin"/>
    <!-- Link to Registration Screen -->
    <TextView android:id="@+id/link_to_register"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dip"
        android:layout_marginBottom="40dip"
        android:text="@string/Register"
        android:gravity="center"
        android:clickable="true"
        android:textSize="20sp"
        android:onClick="toSignup"
        android:textColor="#0b84aa"/>
</LinearLayout>
